ARM: OMAP4: Adding tuna support
Adding board files for tuna from kernel 3.0

Signed-off-by: Israel Cepeda <israel4c@gmail.com>

Conflicts:
	arch/arm/mach-omap2/Kconfig
	arch/arm/mach-omap2/Makefile

Change-Id: I25288f9e0d30852e7da9956bd06f39c1bff7baab

--- a/arch/arm/mach-omap2/Kconfig
+++ b/arch/arm/mach-omap2/Kconfig
@@ -529,6 +529,15 @@ config USE_AMAZON_DUCATI
         bool "Ducati settings which are compatible with the stock binary from Amazon"
         depends on MACH_OMAP4_BOWSER
 
+config MACH_TUNA
+	bool "Tuna Board"
+	default y
+	depends on ARCH_OMAP4
+	select OMAP_PACKAGE_CBL
+	select OMAP_PACKAGE_CBS
+	select REGULATOR_FIXED_VOLTAGE if REGULATOR
+	select OMAP_TPS6236X
+
 config MACH_OMAP5_SEVM
 	bool "OMAP5 EVM board"
 	default y
