--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -306,6 +306,23 @@ obj-$(CONFIG_MACH_OMAP4_BOWSER_SUBTYPE_TATE) += board-tate.o \
 					   board-bowser-wifi.o \
 					   board-44xx-serial.o
 
+obj-$(CONFIG_MACH_TUNA)			+= board-tuna.o \
+					   board-tuna-display.o \
+					   board-tuna-input.o \
+					   board-tuna-jack.o \
+					   board-tuna-nfc.o \
+					   board-tuna-power.o \
+					   board-tuna-sensors.o \
+					   board-tuna-vibrator.o \
+					   board-tuna-wifi.o \
+					   board-tuna-bluetooth.o \
+					   board-tuna-emif.o \
+					   board-tuna-connector.o \
+					   board-tuna-pogo.o \
+					   board-tuna-usbhost.o \
+					   omap_phy_internal.o \
+					   hsmmc.o
+
 obj-$(CONFIG_MACH_PCM049)		+= board-omap4pcm049.o
 
 obj-$(CONFIG_MACH_OMAP3517EVM)		+= board-am3517evm.o
